<resources>
    <string name="app_name">CarbuPrice</string>
    <string name="DireccionGasolinera">Dirección: </string>
    <string name="horarioGasolinera">Horario: </string>
    <string name="precioCombustible">Precio combustible:</string>
    <string name="GasoleoA">Gasoleo A:</string>
    <string name="GasoleoB">Gasoleo B:</string>
    <string name="GasoleoPremium">Gasoleo Premium:</string>
    <string name="Gasolina95E10">Gasolina 95 E10:</string>
    <string name="Gasolina95E5">Gasolina 95 E5:</string>
    <string name="Gasolina95E5Premium">Gasolina 95 E5 Premium:</string>
    <string name="Gasolina98E10">Gasolina 98 E10:</string>
    <string name="Gasolina98E5">Gasolina 98 E5:</string>
    <string name="Biodiesel">Biodiesel:</string>
    <string name="Hidrogeno">Hidrogeno:</string>
    <string name="Bioetanol">Bioetanol:</string>
    <string name="GasNaturalComprimido">Gas natural comprimido:</string>
    <string name="GasNaturalLicuado">Gas natural licuado:</string>
    <string name="GasesLicuadosPetroleo">Gases licuados petróleo:</string>
    <string name="action_search">Buscar</string>
    <string name="action_settings">Ajustes</string>
    <string name="VerEnMapa">Ver en el mapa</string>
    <string name="preferencia_busqueda">Preferencia de búsqueda</string>
    <string name="personal_preference">Preferencias personales:</string>
    <string name="preferencia_combustible">Combustibles favoritos</string>
    <string name="Usuario">Usuario</string>
    <string name="nombreusuario">Nombre de usuario</string>
    <string name="bienvenido">Bienvenido</string>
    <string name="rotulo">Marca</string>
    <string name="localidad">Localidad</string>
    <string name="municipio">Municipio</string>
    <string name="direccion">Dirección</string>
    <string name="codigopostal">Código postal</string>
    <string name="buscarpor">Buscar por</string>
    <string name="Biod">Biod</string>
    <string name="Bioet">Bioet</string>
    <string name="GasA">GasA</string>
    <string name="GasB">GasB</string>
    <string name="GasPrem">GasPrem</string>
    <string name="Gas95E10">Gas95E10</string>
    <string name="Gas95E5">Gas95E5</string>
    <string name="Gas95E5Prem">Gas95E5Prem</string>
    <string name="Gas98E10">Gas98E10</string>
    <string name="Gas98E5">Gas98E5</string>
    <string name="Hidr">Hidr</string>
    <string name="Gnc">Gnc</string>
    <string name="Gnl">Gnl</string>
    <string name="Glp">Glp</string>
    <string name="PrefDef">1</string>
    <string name="nohaydatos">Error al cargar los datos, pruebe más tarde.</string>
    <string name="MostrarTodasLasGasolinerasMapa">Mostrar todas las gasolineras</string>
    <string name="seleccionaunagasolinera">Seleccione una gasolinera antes de pulsar</string>
    <string name="errorCargar">FALLO AL CONECTAR</string>
    <string name="falloConexion">No hay datos</string>
    <string name="comprobacion">Compruebe su conexión a Internet</string>
    <string name="BiodieselPreference">Biodiesel</string>
    <string name="BioetanolPreference">Bioetanol</string>
    <string name="GasoleoAPreference">Gasoleo A</string>
    <string name="GasoleoBPreference">Gasoleo B</string>
    <string name="GasoleoPremiumPreference">Gasoleo Premium</string>
    <string name="Gasolina95E10Preference">Gasolina 95 E10</string>
    <string name="Gasolina95E5Preference">Gasolina 95 E5</string>
    <string name="Gasolina95E5PremiumPreference">Gasolina 95 E5 Premium</string>
    <string name="Gasolina98E10Preference">Gasolina 98 E10</string>
    <string name="Gasolina98E5Preference">Gasolina 98 E5</string>
    <string name="HidrogenoPreference">Hidrogeno</string>
    <string name="GasNaturalComprimidoPreference">Gas Natural Comprimido</string>
    <string name="GasNaturalLicuadoPreference">Gas Natural Licuado</string>
    <string name="GasesLicuadosPetroleoPreference">Gases Licuados Petróleo</string>
    <string name="sinconexion">No hay conexión a Internet, los datos no se actualizarán</string>
    <string name="modoNoche">Modo noche</string>
    <string name="filtrarporciudad">Filtrar por ciudad</string>
    <string name="Gijon">Gijón</string>
    <string name="Oviedo">Oviedo</string>
    <string name="Aviles">Aviles</string>
    <string name="Repsol">Repsol</string>
    <string name="Cepsa">Cepsa</string>
    <string name="Shell">Shell</string>
    <string name="BP">BP</string>
    <string name="Petronor">Petronor</string>
    <string name="Campsa">Campsa</string>
    <string name="Galp">Galp</string>
    <string name="filtrarporrotulo">Filtrar por marca</string>
    <string name="tituloFiltrar">Filtrar</string>
    <string name="direccionTv">Dirección:</string>
    <string name="modonochenodisponible">El modo noche no esta disponible</string>
    <string name="Filtrar">Filtrar</string>
    <string name="filtrarporcombustible">Filtrar por combustible</string>
</resources>
