<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.recycleview.MainActivity">
    <item
        android:id="@+id/action_search"
        android:orderInCategory="101"
        android:title="@string/action_search"
        app:showAsAction="always"
        app:actionViewClass="androidx.appcompat.widget.SearchView"/>
    <item
        android:title="@string/Filtrar"
        android:orderInCategory="103"
        android:id="@+id/action_filter"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="103"
        android:title="@string/action_settings"
        app:showAsAction="never"/>
</menu>
